Revert back to Java 11