@@ -8,10 +8,6 @@
     <artifactId>MapConvert</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <properties>
-        <java.compiler.args>--enable-preview</java.compiler.args>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.tiledreader</groupId>
@@ -73,17 +69,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>14</release>
-                    <compilerArgs>${java.compiler.args}</compilerArgs>
+                    <release>11</release>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>${java.compiler.args}</argLine>
-                </configuration>
             </plugin>
 
             <plugin>
